--- a/HeroesOfPymoli/HeroesOfPymoli_QAZI_Nabeel.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_QAZI_Nabeel.ipynb
@@ -275,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Purchasing Analysis"
+    "## Purchasing Analysis (Total)"
    ]
   },
   {
@@ -2750,7 +2750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2782,7 +2782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2804,12 +2804,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Purchasing Analysis (Continued)"
+    "## Purchasing Analysis (Total - Continued)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2856,7 +2856,7 @@
        "0                     179         $3.05                  780     $2,379.77"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2866,6 +2866,8 @@
     "average_purchase_price = clean_purchase_df[\"Price\"].mean()\n",
     "total_number_of_purchases = clean_purchase_df[\"Item ID\"].count()\n",
     "total_revenue = purchase_df[\"Price\"].sum()\n",
+    "\n",
+    "# Collect analysis in a summary data frame\n",
     "purchasing_analysis_df = pd.DataFrame({\"Number of Unique Items\":[total_number_of_unique_items],\\\n",
     "              \"Average Price\":[average_purchase_price],\\\n",
     "             \"Number of Purchases\":[total_number_of_purchases],\\\n",
@@ -2874,7 +2876,7 @@
     "# Using mapping to change display formatting for readibility\n",
     "purchasing_analysis_df[\"Average Price\"] = purchasing_analysis_df[\"Average Price\"].map('${:.2f}'.format)\n",
     "purchasing_analysis_df[\"Total Revenue\"] = purchasing_analysis_df[\"Total Revenue\"].map('${:,.2f}'.format)\n",
-    "purchasing_analysis_df"
+    "purchasing_analysis_df.head()"
    ]
   },
   {
@@ -2886,7 +2888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2941,7 +2943,7 @@
        "Other / Non-Disclosed            11                 1.91%"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2961,45 +2963,260 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Purchasing Analysis (Gender)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "113\n",
-      "652\n",
-      "15\n",
-      "3.203008849557519\n",
-      "3.0178527607361953\n",
-      "3.3460000000000005\n",
-      "361.94\n",
-      "1967.64\n",
-      "50.19\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Average Purchase Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "      <th>Avg Total Purchase Per Person</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gender</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Female</th>\n",
+       "      <td>113</td>\n",
+       "      <td>$3.20</td>\n",
+       "      <td>$361.94</td>\n",
+       "      <td>???</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Male</th>\n",
+       "      <td>652</td>\n",
+       "      <td>$3.02</td>\n",
+       "      <td>$1,967.64</td>\n",
+       "      <td>???</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Other / Non-Disclosed</th>\n",
+       "      <td>15</td>\n",
+       "      <td>$3.35</td>\n",
+       "      <td>$50.19</td>\n",
+       "      <td>???</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Purchase Count Average Purchase Price  \\\n",
+       "Gender                                                         \n",
+       "Female                            113                  $3.20   \n",
+       "Male                              652                  $3.02   \n",
+       "Other / Non-Disclosed              15                  $3.35   \n",
+       "\n",
+       "                      Total Purchase Value Avg Total Purchase Per Person  \n",
+       "Gender                                                                    \n",
+       "Female                             $361.94                           ???  \n",
+       "Male                             $1,967.64                           ???  \n",
+       "Other / Non-Disclosed               $50.19                           ???  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Grab locations of Male/Female/Other genders\n",
-    "isFemale = purchase_df[\"Gender\"]==\"Female\"\n",
-    "isMale = purchase_df[\"Gender\"]==\"Male\"\n",
-    "isOther = purchase_df[\"Gender\"] == \"Other / Non-Disclosed\"\n",
+    "# Groupby Gender to calculate gender demographics\n",
+    "purchase_count = (clean_purchase_df.groupby([\"Gender\"])[\"Purchase ID\"].count())\n",
+    "average_price = (clean_purchase_df.groupby([\"Gender\"])[\"Price\"].mean())\n",
+    "total_revenue = (clean_purchase_df.groupby([\"Gender\"])[\"Price\"].sum())\n",
     "\n",
-    "print(purchase_df[isFemale][\"Item ID\"].count())\n",
-    "print(purchase_df[isMale][\"Item ID\"].count())\n",
-    "print(purchase_df[isOther][\"Item ID\"].count())\n",
+    "# Summary Table for purchasing analysis by Gender\n",
+    "summary_purchase_by_gender = pd.DataFrame({\"Purchase Count\": purchase_count,\\\n",
+    "              \"Average Purchase Price\": average_price,\\\n",
+    "              \"Total Purchase Value\": total_revenue,\n",
+    "             \"Avg Total Purchase Per Person\":[\"???\",\"???\",\"???\"]})\n",
+    "temp_key = \"Average Purchase Price\"\n",
+    "summary_purchase_by_gender[temp_key] = summary_purchase_by_gender[temp_key].map('${:.2f}'.format)\n",
+    "temp_key = \"Total Purchase Value\"\n",
+    "summary_purchase_by_gender[temp_key] = summary_purchase_by_gender[temp_key].map('${:,.2f}'.format)\n",
+    "summary_purchase_by_gender\n",
+    "#temp = clean_purchase_df.groupby([\"Gender\",\"SN\"])\n",
+    "#temp[\"Price\"].count()\n",
+    "#avg_price_per_person = (((clean_purchase_df.groupby([\"Gender\", \"SN\"])[\"Price\"]).sum())/((clean_purchase_df.groupby([\"Gender\", \"SN\"])[\"Price\"]).count()))\n",
+    "#temp_df = pd.DataFrame(avg_price_per_person)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## !!! Need to calculate avg total per person for Purchasing Analysis (Gender) calculated above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Age Demographics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Top Spenders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Average Purchase Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SN</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Lisosia93</th>\n",
+       "      <td>5</td>\n",
+       "      <td>$3.79</td>\n",
+       "      <td>$18.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Idastidru52</th>\n",
+       "      <td>4</td>\n",
+       "      <td>$3.86</td>\n",
+       "      <td>$15.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chamjask73</th>\n",
+       "      <td>3</td>\n",
+       "      <td>$4.61</td>\n",
+       "      <td>$13.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iral74</th>\n",
+       "      <td>4</td>\n",
+       "      <td>$3.40</td>\n",
+       "      <td>$13.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iskadarya95</th>\n",
+       "      <td>3</td>\n",
+       "      <td>$4.37</td>\n",
+       "      <td>$13.10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Purchase Count Average Purchase Price Total Purchase Value\n",
+       "SN                                                                     \n",
+       "Lisosia93                 5                  $3.79               $18.96\n",
+       "Idastidru52               4                  $3.86               $15.45\n",
+       "Chamjask73                3                  $4.61               $13.83\n",
+       "Iral74                    4                  $3.40               $13.62\n",
+       "Iskadarya95               3                  $4.37               $13.10"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Group by SN to study player statistics\n",
+    "purchase_count = (clean_purchase_df.groupby([\"SN\"])[\"Item ID\"].count())\n",
+    "average_price = (clean_purchase_df.groupby([\"SN\"])[\"Price\"].mean())\n",
+    "total_revenue = (clean_purchase_df.groupby([\"SN\"])[\"Price\"].sum())\n",
     "\n",
-    "print(purchase_df[isFemale][\"Price\"].mean())\n",
-    "print(purchase_df[isMale][\"Price\"].mean())\n",
-    "print(purchase_df[isOther][\"Price\"].mean())\n",
+    "# Summary Table for purchasing analysis by SN\n",
+    "summary_purchase_by_SN = pd.DataFrame({\"Purchase Count\": purchase_count,\\\n",
+    "              \"Average Purchase Price\": average_price,\\\n",
+    "              \"Total Purchase Value\": total_revenue})\n",
     "\n",
-    "print(purchase_df[isFemale][\"Price\"].sum())\n",
-    "print(purchase_df[isMale][\"Price\"].sum())\n",
-    "print(purchase_df[isOther][\"Price\"].sum())\n",
+    "# Sort summary DataFrame by Total purchase value first before performing formatting\n",
+    "summary_purchase_by_SN = summary_purchase_by_SN.sort_values([\"Total Purchase Value\"],ascending = False)\n",
     "\n",
-    "# AVERAGE PURCHASE TOTAL PER PERSON BY GENDER???"
+    "temp_key = \"Average Purchase Price\"\n",
+    "summary_purchase_by_SN[temp_key] = summary_purchase_by_SN[temp_key].map('${:.2f}'.format)\n",
+    "temp_key = \"Total Purchase Value\"\n",
+    "summary_purchase_by_SN[temp_key] = summary_purchase_by_SN[temp_key].map('${:.2f}'.format)\n",
+    "\n",
+    "summary_purchase_by_SN.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Most Popular Items"
    ]
   },
   {
