created cells for stuff to do to complete the tasks"

--- a/HeroesOfPymoli/HeroesOfPymoli_QAZI_Nabeel.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_QAZI_Nabeel.ipynb
@@ -3100,6 +3100,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Purchasing Analysis (Age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Top Spenders"
    ]
   },
@@ -3217,6 +3231,20 @@
    "metadata": {},
    "source": [
     "## Most Popular Items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Most Profitable Items"
    ]
   },
   {
