Completed all calculations

--- a/HeroesOfPymoli/HeroesOfPymoli_HW4.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_HW4.ipynb
@@ -484,77 +484,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Purchase Count</th>        <th class=\"col_heading level0 col1\" >Average Purchase Price</th>        <th class=\"col_heading level0 col2\" >Total Purchase Value</th>        <th class=\"col_heading level0 col3\" >Avg Total Purchase Per Person</th>    </tr>    <tr>        <th class=\"index_name level0\" >Age Ranges</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Purchase Count</th>        <th class=\"col_heading level0 col1\" >Average Purchase Price</th>        <th class=\"col_heading level0 col2\" >Total Purchase Value</th>        <th class=\"col_heading level0 col3\" >Avg Total Purchase per Person</th>    </tr>    <tr>        <th class=\"index_name level0\" >Age Ranges</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732level0_row0\" class=\"row_heading level0 row0\" ><10</th>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row0_col0\" class=\"data row0 col0\" >23</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row0_col1\" class=\"data row0 col1\" >$3.35</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row0_col2\" class=\"data row0 col2\" >$77.13</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row0_col3\" class=\"data row0 col3\" >?</td>\n",
+       "                        <th id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732level0_row0\" class=\"row_heading level0 row0\" ><10</th>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row0_col0\" class=\"data row0 col0\" >23</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row0_col1\" class=\"data row0 col1\" >$3.35</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row0_col2\" class=\"data row0 col2\" >$77.13</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row0_col3\" class=\"data row0 col3\" >$4.54</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732level0_row1\" class=\"row_heading level0 row1\" >10-14</th>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row1_col0\" class=\"data row1 col0\" >28</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row1_col1\" class=\"data row1 col1\" >$2.96</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row1_col2\" class=\"data row1 col2\" >$82.78</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row1_col3\" class=\"data row1 col3\" >?</td>\n",
+       "                        <th id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732level0_row1\" class=\"row_heading level0 row1\" >10-14</th>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row1_col0\" class=\"data row1 col0\" >28</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row1_col1\" class=\"data row1 col1\" >$2.96</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row1_col2\" class=\"data row1 col2\" >$82.78</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row1_col3\" class=\"data row1 col3\" >$3.76</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732level0_row2\" class=\"row_heading level0 row2\" >15-19</th>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row2_col0\" class=\"data row2 col0\" >136</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row2_col1\" class=\"data row2 col1\" >$3.04</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row2_col2\" class=\"data row2 col2\" >$412.89</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row2_col3\" class=\"data row2 col3\" >?</td>\n",
+       "                        <th id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732level0_row2\" class=\"row_heading level0 row2\" >15-19</th>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row2_col0\" class=\"data row2 col0\" >136</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row2_col1\" class=\"data row2 col1\" >$3.04</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row2_col2\" class=\"data row2 col2\" >$412.89</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row2_col3\" class=\"data row2 col3\" >$3.86</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732level0_row3\" class=\"row_heading level0 row3\" >20-24</th>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row3_col0\" class=\"data row3 col0\" >365</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row3_col1\" class=\"data row3 col1\" >$3.05</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row3_col2\" class=\"data row3 col2\" >$1,114.06</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row3_col3\" class=\"data row3 col3\" >?</td>\n",
+       "                        <th id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732level0_row3\" class=\"row_heading level0 row3\" >20-24</th>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row3_col0\" class=\"data row3 col0\" >365</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row3_col1\" class=\"data row3 col1\" >$3.05</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row3_col2\" class=\"data row3 col2\" >$1,114.06</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row3_col3\" class=\"data row3 col3\" >$4.32</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732level0_row4\" class=\"row_heading level0 row4\" >25-29</th>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row4_col0\" class=\"data row4 col0\" >101</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row4_col1\" class=\"data row4 col1\" >$2.90</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row4_col2\" class=\"data row4 col2\" >$293.00</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row4_col3\" class=\"data row4 col3\" >?</td>\n",
+       "                        <th id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732level0_row4\" class=\"row_heading level0 row4\" >25-29</th>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row4_col0\" class=\"data row4 col0\" >101</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row4_col1\" class=\"data row4 col1\" >$2.90</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row4_col2\" class=\"data row4 col2\" >$293.00</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row4_col3\" class=\"data row4 col3\" >$3.81</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732level0_row5\" class=\"row_heading level0 row5\" >30-34</th>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row5_col0\" class=\"data row5 col0\" >73</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row5_col1\" class=\"data row5 col1\" >$2.93</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row5_col2\" class=\"data row5 col2\" >$214.00</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row5_col3\" class=\"data row5 col3\" >?</td>\n",
+       "                        <th id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732level0_row5\" class=\"row_heading level0 row5\" >30-34</th>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row5_col0\" class=\"data row5 col0\" >73</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row5_col1\" class=\"data row5 col1\" >$2.93</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row5_col2\" class=\"data row5 col2\" >$214.00</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row5_col3\" class=\"data row5 col3\" >$4.12</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732level0_row6\" class=\"row_heading level0 row6\" >35-39</th>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row6_col0\" class=\"data row6 col0\" >41</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row6_col1\" class=\"data row6 col1\" >$3.60</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row6_col2\" class=\"data row6 col2\" >$147.67</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row6_col3\" class=\"data row6 col3\" >?</td>\n",
+       "                        <th id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732level0_row6\" class=\"row_heading level0 row6\" >35-39</th>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row6_col0\" class=\"data row6 col0\" >41</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row6_col1\" class=\"data row6 col1\" >$3.60</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row6_col2\" class=\"data row6 col2\" >$147.67</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row6_col3\" class=\"data row6 col3\" >$4.76</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732level0_row7\" class=\"row_heading level0 row7\" >40+</th>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row7_col0\" class=\"data row7 col0\" >13</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row7_col1\" class=\"data row7 col1\" >$2.94</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row7_col2\" class=\"data row7 col2\" >$38.24</td>\n",
-       "                        <td id=\"T_bcfd2a28_3020_11ea_b4aa_98fa9b3d5732row7_col3\" class=\"data row7 col3\" >?</td>\n",
+       "                        <th id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732level0_row7\" class=\"row_heading level0 row7\" >40+</th>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row7_col0\" class=\"data row7 col0\" >13</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row7_col1\" class=\"data row7 col1\" >$2.94</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row7_col2\" class=\"data row7 col2\" >$38.24</td>\n",
+       "                        <td id=\"T_a5a8a1ae_3024_11ea_8d1b_98fa9b3d5732row7_col3\" class=\"data row7 col3\" >$3.19</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x2ac730b8390>"
+       "<pandas.io.formats.style.Styler at 0x2ac77d9c978>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,14 +574,27 @@
     "total_purchase_value_per_age_bin = purchase_df.groupby(['Age Ranges'])['Price'].sum()\n",
     "#avg_total_purchase_per_person = ???\n",
     "\n",
-    "purchase_by_age_df = pd.DataFrame({'Purchase Count': purchase_counts_per_age_bin,\\\n",
+    "summary_purchase_by_age_df = pd.DataFrame({'Purchase Count': purchase_counts_per_age_bin,\\\n",
     "                                  'Average Purchase Price': avg_purchase_price_per_age_bin,\\\n",
-    "                                  'Total Purchase Value': total_purchase_value_per_age_bin,\\\n",
-    "                                  'Avg Total Purchase Per Person':['?','?','?','?','?','?','?','?']})\n",
+    "                                  'Total Purchase Value': total_purchase_value_per_age_bin})\n",
+    "\n",
+    "# Calculate total price per ID per Age Ranges by adding all the prices per ID.\n",
+    "total_purchase_pp_per_age_group = (purchase_df.groupby(['Age Ranges','SN'])['Price'].sum().reset_index())\n",
+    "avg_total_purchase_pp_per_age_group = total_purchase_pp_per_age_group.groupby('Age Ranges').mean()\n",
+    "\n",
+    "# using reset_index() to bring Age Ranges as common column in both dfs\n",
+    "avg_total_purchase_pp_per_age_group = avg_total_purchase_pp_per_age_group.reset_index()\n",
+    "\n",
+    "# Merge summary_purchase_by_gender with newly calculated avg_total_purchase_per_person\n",
+    "summary_purchase_by_age_df_merged = pd.merge(summary_purchase_by_age_df.reset_index(),\\\n",
+    "                                             avg_total_purchase_pp_per_age_group)\n",
+    "summary_purchase_by_age_df_merged = summary_purchase_by_age_df_merged.set_index('Age Ranges')\n",
+    "summary_purchase_by_age_df_merged = summary_purchase_by_age_df_merged.rename(columns={'Price':'Avg Total Purchase per Person'})\n",
     "\n",
     "# Change formatting for cleaner display\n",
-    "purchase_by_age_df.style.format({'Average Purchase Price': \"${:,.2f}\",\\\n",
-    "                                  'Total Purchase Value': '${:,.2f}'})"
+    "summary_purchase_by_age_df_merged.style.format({'Average Purchase Price': \"${:,.2f}\",\\\n",
+    "                                  'Total Purchase Value': '${:,.2f}',\\\n",
+    "                                               'Avg Total Purchase per Person': '${:,.2f}'})"
    ]
   },
   {
